feat: add project header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@
 
   --main-font: Barlow, system-ui, sans-serif;
   --heading-font: Raleway, system-ui, sans-serif;
+
+  /* Sizing */
+  --size-4: 4rem;
+
+  --header-height: var(--size-4);
 }
 
 /*------------------------------------*\
@@ -65,11 +70,15 @@ h6 {
   font-family: var(--heading-font);
 }
 
-p {
+p,
+ul,
+ol {
   line-height: 1.5;
 }
 @media (min-width: 768px) {
-  p {
+  p,
+  ul,
+  ol {
     font-size: calc(18rem / var(--fs-base));
   }
 }
@@ -160,7 +169,7 @@ hr {
 }
 @media (min-width: 768px) {
   .header {
-    height: 4rem;
+    height: var(--header-height);
   }
 }
 
@@ -362,6 +371,11 @@ hr {
   }
 }
 
+.works__project-link {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
 .works__project-image {
   width: 100%;
   border-radius: 5px;
@@ -492,4 +506,56 @@ hr {
   background: url("../img/linkedin-logo.svg");
   background-size: contain;
   background-position: center;
+}
+
+/*------------------------------------*\
+  #PROJECT-HEADER
+\*------------------------------------*/
+
+.project-header {
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-height: 75vh;
+  padding-top: var(--header-height);
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  position: relative;
+}
+
+.project-header--fisinius {
+  background: url("../img/news.webp") no-repeat center center;
+  background-size: cover;
+}
+
+.project-header__title {
+  font-size: calc(52rem / var(--fs-base));
+  margin: 0;
+}
+
+.project-header__tagline {
+  font-weight: 300;
+  font-size: calc(21rem / var(--fs-base));
+}
+
+.project-header__cta {
+  background: linear-gradient(
+    270deg,
+    var(--accent-color-light),
+    var(--accent-color),
+    var(--accent-color),
+    var(--accent-color-light)
+  );
+  background-size: 250% auto;
+  background-position: 0 100%;
+  color: var(--white);
+  border: none;
+  transition: all 0.5s ease;
+}
+.project-header__cta:hover {
+  background-position: 99% 0;
+  box-shadow: 0px 2px 6px 0px var(--accent-color-light);
 }
