--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,7 +555,122 @@ hr {
   border: none;
   transition: all 0.5s ease;
 }
+
 .project-header__cta:hover {
   background-position: 99% 0;
   box-shadow: 0px 2px 6px 0px var(--accent-color-light);
+}
+
+/*------------------------------------*\
+  #TECHNICAL-SHEET
+\*------------------------------------*/
+
+.technical-sheet__stack {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.technical-sheet__figure {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.22);
+  border-radius: 5px;
+  padding: 2rem;
+  filter: grayscale(1);
+  transition: all 0.5s ease;
+}
+
+.technical-sheet__figure:hover {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.22);
+  filter: none;
+}
+
+.technical-sheet__figure-image {
+  width: 75%;
+}
+
+.technical-sheet__figure-caption {
+  font-size: calc(18rem / var(--fs-base));
+  font-weight: normal;
+}
+
+.project-resources__parallaxes {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  list-style-type: none;
+}
+
+.project-resources__resource {
+  flex: 1 1 25vh;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-resources__resource--fisinius-demo::before {
+  background-image: url("../img/news.webp");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1) brightness(0.37);
+  transition: all 0.5s ease;
+}
+
+.project-resources__resource--fisinius-demo:hover::before {
+  filter: none;
+}
+
+.project-resources__resource--github::before {
+  background-image: url("../img/github.webp");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1) brightness(0.37);
+  transition: all 0.5s ease;
+}
+
+.project-resources__resource--github:hover {
+  text-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.22);
+}
+
+.project-resources__resource--github:hover::before {
+  filter: none;
+}
+
+.project-resources__resource-link {
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.project-resources__resource-description {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.25px;
 }
