feat: add artemis page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,6 +541,11 @@ hr {
   background-size: cover;
 }
 
+.project-header--artemis {
+  background: url("../img/artemis.webp") no-repeat center center;
+  background-size: cover;
+}
+
 .project-header__title {
   font-size: calc(52rem / var(--fs-base));
   margin: 0;
@@ -621,8 +626,8 @@ hr {
 }
 
 .technical-sheet__figure-image {
-  width: 75%;
-  height: 75%;
+  height: 60%;
+  /* width: 60%; */
 }
 
 .technical-sheet__figure-caption {
@@ -705,6 +710,30 @@ hr {
 }
 
 .project-resources__resource--hacker-news-demo:hover::before {
+  filter: none;
+}
+
+.project-resources__resource--artemis-demo::before {
+  background-image: url("../img/artemis.webp");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1) brightness(0.37);
+  transition: all 0.5s ease;
+}
+@media (min-width: 1024px) {
+  .project-resources__resource--artemis-demo::before {
+    background-attachment: fixed;
+  }
+}
+
+.project-resources__resource--artemis-demo:hover::before {
   filter: none;
 }
 
