--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,793 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;700&family=Raleway:wght@300;500&display=swap");
-
-/*------------------------------------*\
-  #VARIABLES
-\*------------------------------------*/
-
-:root {
-  /* Primitivas */
-  --shark: hsla(240, 1%, 14%, 0.87);
-  --shark-mid: hsla(240, 1%, 14%, 0.5);
-  --athens-gray: hsl(240, 22%, 95%);
-  --cornflower-blue: hsl(236, 92%, 66%);
-  --malibu: hsl(236, 92%, 80%);
-  --governor-bay: hsl(236, 47%, 46%);
-
-  /* Semánticas */
-  --primary-color: var(--shark);
-  --primary-color-light: var(--shark-mid);
-  --accent-color: var(--cornflower-blue);
-  --accent-color-light: var(--malibu);
-  --accent-color-dark: var(--governor-bay);
-  --white: var(--athens-gray);
-
-  /* Tipografía */
-  --fs-base: 14;
-  --main-font: Barlow, system-ui, sans-serif;
-  --heading-font: Raleway, system-ui, sans-serif;
-
-  /* Sizing */
-  --size-4: 4rem;
-  --header-height: var(--size-4);
-}
-
-/*------------------------------------*\
-  #GLOBALES
-\*------------------------------------*/
-
-html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 4rem;
-}
-
-body {
-  background-color: var(--white);
-  font-family: sans-serif;
-  font-family: var(--main-font);
-  font-size: calc(14rem / var(--fs-base));
-  color: var(--primary-color);
-}
-@media (min-width: 1024px) {
-  body {
-    background-color: transparent;
-    background-image: radial-gradient(at top left, var(--white), transparent),
-      radial-gradient(at top right, #dcdcdf, transparent),
-      radial-gradient(at bottom left, #c3c3c6, transparent);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-  }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: sans-serif;
-  font-family: var(--heading-font);
-}
-
-p,
-ul,
-ol {
-  line-height: 1.5;
-}
-@media (min-width: 768px) {
-  p,
-  ul,
-  ol {
-    font-size: calc(18rem / var(--fs-base));
-  }
-}
-
-abbr[title] {
-  font-weight: bold;
-}
-
-.container {
-  margin: 0 0.5rem;
-}
-@media (min-width: 1024px) {
-  .container {
-    margin: 0 auto;
-    width: 75%;
-  }
-}
-@media (min-width: 1440px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-.button {
-  background-color: var(--white);
-  background-clip: padding-box;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  cursor: pointer;
-  font-family: var(--main-font);
-  font-size: calc(12rem / var(--fs-base));
-  font-weight: 700;
-  letter-spacing: 1.25px;
-  padding: 0.619rem 1.278rem;
-  position: relative;
-  text-transform: uppercase;
-  transition: all 0.3s ease;
-}
-
-.button::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  z-index: -1;
-  margin: -1px;
-  border-radius: inherit;
-}
-
-.button--accent {
-  color: var(--accent-color);
-}
-
-.button--accent::before {
-  background: linear-gradient(
-    270deg,
-    var(--accent-color-light),
-    var(--accent-color)
-  );
-}
-
-.button--accent:hover {
-  background-color: linear-gradient(
-    270deg,
-    var(--accent-color),
-    var(--accent-color-light)
-  );
-  color: var(--white);
-}
-
-hr {
-  width: 100%;
-  border: 0.1px solid var(--primary-color-light);
-}
-
-/*------------------------------------*\
-  #HEADER
-\*------------------------------------*/
-
-.header {
-  border-bottom: 0.25px solid var(--primary-color-light);
-  backdrop-filter: blur(5px);
-  display: flex;
-  position: -webkit-sticky;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-@media (min-width: 768px) {
-  .header {
-    height: var(--header-height);
-  }
-}
-
-.header__spacer {
-  width: 4rem;
-  height: 4rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-@media (min-width: 768px) {
-  .header__spacer {
-    display: none;
-  }
-}
-
-.header__logo {
-  flex: 1 1 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-@media (min-width: 768px) {
-  .header__logo {
-    justify-content: flex-start;
-  }
-}
-
-.header__logo-img {
-  margin: 0 auto;
-  height: 2rem;
-}
-@media (min-width: 768px) {
-  .header__logo-img {
-    margin: unset;
-    margin-left: 2rem;
-    height: 2rem;
-  }
-}
-
-.header__navigation {
-  display: none;
-}
-@media (min-width: 768px) {
-  .header__navigation {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.header__navigation-links {
-  display: flex;
-  gap: 1.5rem;
-  justify-content: space-between;
-  list-style: none;
-  margin-right: 2rem;
-}
-
-.header__navigation-link {
-  color: var(--primary-color);
-  font-family: var(--heading-font);
-  font-weight: bold;
-  text-decoration: none;
-}
-
-/*------------------------------------*\
-  #SIDEBAR
-\*------------------------------------*/
-
-.sidebar {
-  position: fixed;
-  font-family: var(--heading-font);
-  right: -100%;
-  top: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  background: linear-gradient(270deg, var(--white), #cacacf);
-  transition: all 0.5s ease;
-  z-index: 5;
-  align-items: flex-end;
-}
-
-.sidebar__title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.25rem;
-  padding-left: 1rem;
-}
-
-.sidebar__close-icon {
-  width: 4rem;
-  height: 4rem;
-  text-align: right;
-}
-
-.sidebar__items {
-  font-size: calc(21rem / var(--fs-base));
-  font-weight: bold;
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  align-items: center;
-  height: 100%;
-  justify-content: space-evenly;
-}
-
-.sidebar__item {
-  color: var(--primary-color);
-  padding: 1rem 0;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-#sidebar-check {
-  display: none;
-}
-
-#sidebar-check:checked ~ .sidebar {
-  right: 0;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    display: none;
-  }
-}
-
-/*------------------------------------*\
-  #MAIN
-\*------------------------------------*/
-
-.main-page {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-/*------------------------------------*\
-  #INTRO
-\*------------------------------------*/
-
-.intro {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  height: 100vh;
-  justify-content: center;
-  text-align: center;
-}
-
-@media (min-width: 2560px) {
-  .intro {
-    height: 50vh;
-  }
-}
-
-.intro__presentation {
-  font-family: var(--heading-font);
-  font-weight: 300;
-  font-size: calc(52rem / var(--fs-base));
-  margin: 0;
-}
-@media (min-width: 1440px) {
-  .intro__presentation {
-    font-size: calc(83rem / var(--fs-base));
-  }
-}
-
-.intro__closure {
-  font-family: var(--heading-font);
-  font-weight: 500;
-  font-size: calc(17rem / var(--fs-base));
-}
-@media (min-width: 1440px) {
-  .intro__closure {
-    font-size: calc(29rem / var(--fs-base));
-  }
-}
-
-/*------------------------------------*\
-  #WORKS
-\*------------------------------------*/
-
-.works__projects {
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-}
-@media (min-width: 768px) {
-  .works__projects {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.works__project-link {
-  text-decoration: none;
-  color: var(--primary-color);
-}
-
-.works__project-image {
-  width: 100%;
-  border-radius: 5px;
-}
-
-/*------------------------------------*\
-  #ABOUT
-\*------------------------------------*/
-
-.about__parallax {
-  height: 75vh;
-  background-image: url("../img/me.webp");
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  filter: grayscale(1) brightness(1.15);
-}
-@media (min-width: 768px) {
-  .about__parallax {
-    height: 50vh;
-    background-image: url("../img/me-HD.png");
-    filter: grayscale(1) brightness(1.15) contrast(1.25);
-  }
-}
-
-/*------------------------------------*\
-  #CONTACTO
-\*------------------------------------*/
-
-.contact__form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-@media (min-width: 1024px) {
-  .contact__form {
-    margin: 0 auto;
-    width: 75%;
-  }
-}
-
-.contact__form-control {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-}
-
-.contact__form-control > input,
-.contact__form-control > textarea {
-  border: 1px solid var(--primary-color-light);
-  border-radius: 5px;
-  transition: all 0.5s ease;
-}
-
-.contact__form-control > input:hover,
-.contact__form-control > textarea:hover {
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.22) inset;
-}
-
-.contact__form-label {
-  font-family: var(--heading-font);
-  letter-spacing: 0.15px;
-}
-
-.contact__form-name {
-  height: 2.5rem;
-}
-
-.contact__form-message {
-  resize: none;
-}
-
-@media (min-width: 768px) {
-  .form__submit {
-    width: 250px;
-  }
-}
-
-/*------------------------------------*\
-  #FOOTER
-\*------------------------------------*/
-
-.footer {
-  align-items: center;
-  background-color: var(--primary-color);
-  color: var(--white);
-  display: flex;
-  font-family: var(--heading-font);
-  font-weight: 300;
-  flex-direction: column;
-  min-height: 4rem;
-  margin-top: 2rem;
-  padding: 1rem;
-  gap: 1rem;
-}
-
-.footer__networks {
-  display: flex;
-  justify-content: space-around;
-  gap: 1rem;
-}
-
-.footer__network {
-  width: 2rem;
-  height: 2rem;
-  cursor: pointer;
-}
-
-.footer__network--github {
-  background: url("../img/github-logo.svg");
-  background-size: contain;
-  background-position: center;
-}
-
-.footer__network--twitter {
-  background: url("../img/twitter-logo.svg");
-  background-size: contain;
-  background-position: center;
-}
-
-.footer__network--instagram {
-  background: url("../img/instagram-logo.svg");
-  background-size: contain;
-  background-position: center;
-}
-
-.footer__network--linkedin {
-  background: url("../img/linkedin-logo.svg");
-  background-size: contain;
-  background-position: center;
-}
-
-/*------------------------------------*\
-  #PROJECT-HEADER
-\*------------------------------------*/
-
-.project-header {
-  color: var(--white);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  min-height: 75vh;
-  padding-top: var(--header-height);
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  position: relative;
-}
-@media (min-width: 768px) {
-  .project-header {
-    gap: 3rem;
-  }
-}
-
-.project-header--fisinius {
-  background: url("../img/news.webp") no-repeat center center;
-  background-size: cover;
-}
-
-.project-header--hacker-news {
-  background: url("../img/hacker-news.webp") no-repeat center center;
-  background-size: cover;
-}
-
-.project-header--artemis {
-  background: url("../img/artemis.webp") no-repeat center center;
-  background-size: cover;
-}
-
-.project-header__title {
-  font-size: calc(52rem / var(--fs-base));
-  margin: 0;
-}
-@media only screen and (min-width: 768px) {
-  .project-header__title {
-    font-size: calc(91rem / var(--fs-base));
-  }
-}
-
-.project-header__tagline {
-  font-weight: 300;
-  font-size: calc(21rem / var(--fs-base));
-}
-
-.project-header__cta {
-  background: linear-gradient(
-    270deg,
-    var(--accent-color-light),
-    var(--accent-color),
-    var(--accent-color),
-    var(--accent-color-light)
-  );
-  background-size: 250% auto;
-  background-position: 0 100%;
-  color: var(--white);
-  border: none;
-  transition: all 0.5s ease;
-}
-
-.project-header__cta:hover {
-  background-position: 99% 0;
-  box-shadow: 0px 2px 6px 0px var(--accent-color-light);
-}
-
-/*------------------------------------*\
-  #TECHNICAL-SHEET
-\*------------------------------------*/
-
-.technical-sheet__stack {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-@media only screen and (min-width: 768px) {
-  .technical-sheet__stack {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 75%;
-    gap: 2rem;
-  }
-}
-
-.technical-sheet__figure {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-  text-align: center;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.22);
-  border-radius: 5px;
-  padding: 2rem;
-  filter: grayscale(1);
-  transition: all 0.5s ease;
-  justify-content: center;
-}
-@media (min-width: 768px) {
-  .technical-sheet__figure {
-    justify-content: space-evenly;
-    margin: 0;
-  }
-}
-
-.technical-sheet__figure:hover {
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.22);
-  filter: none;
-}
-
-.technical-sheet__figure-image {
-  height: 60%;
-  /* width: 60%; */
-}
-
-.technical-sheet__figure-caption {
-  font-size: calc(18rem / var(--fs-base));
-  font-weight: normal;
-  justify-self: flex-end;
-}
-
-/*------------------------------------*\
-  #RESOURCES
-\*------------------------------------*/
-
-.project-resources__parallaxes {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  list-style-type: none;
-}
-@media (min-width: 768px) {
-  .project-resources__parallaxes {
-    flex-direction: row;
-  }
-}
-
-.project-resources__resource {
-  flex: 1 1 25vh;
-  display: flex;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-}
-@media (min-width: 768px) {
-  .project-resources__resource {
-    height: 50vh;
-  }
-}
-
-.project-resources__resource--fisinius-demo::before {
-  background-image: url("../img/news.webp");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(1) brightness(0.37);
-  transition: all 0.5s ease;
-}
-@media (min-width: 1024px) {
-  .project-resources__resource--fisinius-demo::before {
-    background-attachment: fixed;
-  }
-}
-
-.project-resources__resource--fisinius-demo:hover::before {
-  filter: none;
-}
-
-.project-resources__resource--hacker-news-demo::before {
-  background-image: url("../img/hacker-news.webp");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(1) brightness(0.37);
-  transition: all 0.5s ease;
-}
-@media (min-width: 1024px) {
-  .project-resources__resource--hacker-news-demo::before {
-    background-attachment: fixed;
-  }
-}
-
-.project-resources__resource--hacker-news-demo:hover::before {
-  filter: none;
-}
-
-.project-resources__resource--artemis-demo::before {
-  background-image: url("../img/artemis.webp");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(1) brightness(0.37);
-  transition: all 0.5s ease;
-}
-@media (min-width: 1024px) {
-  .project-resources__resource--artemis-demo::before {
-    background-attachment: fixed;
-  }
-}
-
-.project-resources__resource--artemis-demo:hover::before {
-  filter: none;
-}
-
-.project-resources__resource--github::before {
-  background-image: url("../img/github.webp");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  filter: grayscale(1) brightness(0.37);
-  transition: all 0.5s ease;
-}
-@media (min-width: 1024px) {
-  .project-resources__resource--github::before {
-    background-attachment: fixed;
-  }
-}
-
-.project-resources__resource--github:hover {
-  text-shadow: 0 2px 20px var(--primary-color);
-}
-
-.project-resources__resource--github:hover::before {
-  filter: none;
-}
-
-.project-resources__resource-link {
-  color: var(--white);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.project-resources__resource-image {
-  width: 25%;
-  text-align: center;
-  font-size: 4.5rem;
-}
-@media (min-width: 768px) {
-  .project-resources__resource-image {
-    font-size: 7.975rem;
-  }
-}
-
-.project-resources__resource-description {
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 1.25px;
-}
+@import url("./00-settings/settings.css");
+@import url("./01-generics/normalize.css");
+@import url("./02-elements/elements.css");
