fix: fixed private name files

--- a/assets/css/02-elements/project/project.css
+++ b/assets/css/02-elements/project/project.css
@@ -1,3 +1,3 @@
-@import url("./_project-header.css");
-@import url("./_resources.css");
-@import url("./_technical-sheet.css");
+@import url("./-project-header.css");
+@import url("./-resources.css");
+@import url("./-technical-sheet.css");
