--- a/assets/css/00-settings/settings.css
+++ b/assets/css/00-settings/settings.css
@@ -1,2 +1,2 @@
-@import url("./_primitives.css");
-@import url("./_globals.css");
+@import url("./-primitives.css");
+@import url("./-globals.css");
