--- a/assets/css/02-elements/main-page/main-page.css
+++ b/assets/css/02-elements/main-page/main-page.css
@@ -1,3 +1,3 @@
-@import url("./_about.css");
-@import url("./_intro.css");
-@import url("./_works.css");
+@import url("./-about.css");
+@import url("./-intro.css");
+@import url("./-works.css");
