--- a/assets/css/02-elements/shared/shared.css
+++ b/assets/css/02-elements/shared/shared.css
@@ -1,5 +1,5 @@
-@import url("./_contacto.css");
-@import url("./_footer.css");
-@import url("./_header.css");
-@import url("./_main.css");
-@import url("./_sidebar.css");
+@import url("./-contacto.css");
+@import url("./-footer.css");
+@import url("./-header.css");
+@import url("./-main.css");
+@import url("./-sidebar.css");
